--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-#HomePage {
+.HomePage {
     width: 100%;
     height: 100vh;
     background-image: url(../images/plage.jpg);
@@ -15,8 +15,13 @@
     align-items: center;
 }
 
-#heure {
+.info {
     color: #fff;
-    font-size: 15rem;
     padding-left: 10%;
+    font-size: 1.8rem;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+#heure { 
+    font-size: 15rem!important;
 }
