--- a/css/styles.css
+++ b/css/styles.css
@@ -4,15 +4,18 @@
     box-sizing: border-box;
 }
 
-.HomePage {
+#HomePage {
     width: 100%;
     height: 100vh;
-    background-image: url(../images/plage.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     display: flex;
     align-items: center;
+}
+
+section {
+    background: url(../images/plage.jpg)
 }
 
 .info {
