--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+/*HOME-PAGE*/
 #HomePage {
     width: 100%;
     height: 100vh;
@@ -21,7 +22,7 @@
     font-size: 1.8rem;
 }
 
-.info {
+.location {
     position: absolute;
     bottom: 15%;
     padding-left: 10%;
