--- a/css/styles.css
+++ b/css/styles.css
@@ -15,11 +15,19 @@
     background: url(../images/plage.jpg);
 }
 
-.coment {
+#coment {
     position: absolute;
     top: 10%;
     padding-left: 10%;
     font-size: 1.8rem;
+}
+.refresh {
+    position: absolute;
+    top: 11%;
+    left: 48%;
+    font-size: 1.8rem;
+    cursor: pointer;
+    color: #fff;
 }
 
 .location {
